Responsive Navbar Created

--- a/structure.html
+++ b/structure.html
@@ -14,7 +14,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="navbarContainer">
+        <div class="navBar">
+            <div class="logo">
+                <img src="./assets/logo.png" alt="">
+            </div>
+            
+                <ul class="menuLinks">
+                    <li class="list-item font-bold">Home</li>
+                    <li class="list-item">Shop</li>
+                    <li class="list-item ">About Us</li>
+                    <li class="list-item cartAndText">
+                        <img src="./assets/cart.jpg" class="cartIcon w-7" alt="">
+                        <a href="">Cart($56)</a>
+                    </li>
+                </ul>
+            
+        </div>
+    </div>
 
+
+
+
+
+
+
+
+
+
+    <div class="bannerContainer">
+        <div class="titleBox"></div>
+        <div class="imgBox"></div>
+    </div>
 
 
 
