Responsive Banner Created

--- a/structure.html
+++ b/structure.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navbarContainer">
+
+
+    <!--Navigation Bar-->
+    <section class="navbarContainer">
         <div class="navBar">
             <div class="logo">
                 <img src="./assets/logo.png" alt="">
@@ -31,21 +34,36 @@
                 </ul>
             
         </div>
-    </div>
+    </section>
+    <!--END-->
 
 
 
 
 
+    <!--Banner Section-->
+        <section class="bannerContainer">
+            <div class="bannerSection">
+                <div class="headingSection">
+                    <h1 class="heroText">ALWAYS <span class="customColor">FRESH<br> FLOWERS</span></h1>
+                    <p class="heroPara text-1xl">
+                        Flowers are nature’s colorful gift, spreading beauty and fragrance wherever they bloom. They symbolize love, joy, and renewal, brightening gardens, celebrations, and hearts with their delicate petals and vibrant hues.
+                    </p>
+                </div>
+                <div class="imgSection">
+                    <img src="./assets/hero-flower.png" alt="">
+                </div>
+            </div>
+        </section>
 
 
 
 
+    <!--END-->
 
-    <div class="bannerContainer">
-        <div class="titleBox"></div>
-        <div class="imgBox"></div>
-    </div>
+
+
+
 
 
 
