Our Plant Section Created

--- a/structure.html
+++ b/structure.html
@@ -46,7 +46,7 @@
             <div class="bannerSection">
                 <div class="headingSection">
                     <h1 class="heroText">ALWAYS <span class="customColor">FRESH<br> FLOWERS</span></h1>
-                    <p class="heroPara text-1xl">
+                    <p class="heroPara">
                         Flowers are nature’s colorful gift, spreading beauty and fragrance wherever they bloom. They symbolize love, joy, and renewal, brightening gardens, celebrations, and hearts with their delicate petals and vibrant hues.
                     </p>
                 </div>
@@ -56,10 +56,80 @@
             </div>
         </section>
 
+    <!--END-->
+
+
+
+
+
+
+
+    <!--Our Plant Section-->
+        <section class="ourPlantContainer">
+            <div class="ourPlantSection">
+                <div class="heroHeading">
+                    <h1 class="text-5xl font-bold text-center"><span class="customColor">Our</span> Plants</h1>
+                    <p class="text-center w-[800px]">Flowers whisper stories of seasons, blooming in quiet grace. Their colors dance in sunlight, offering peace and inspiration. Each petal holds emotion—soft reminders of beauty, growth, and fleeting moments.
+                    </p>
+                </div>
+
+
+
+
+                <div class="cardSection">
+                    <div class="cardOne cards">
+                        <img src="./assets/sample-flower-image.png" alt="">
+                        <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
+                        <button class="btn">ADD TO CART</button>
+                    </div>
+                    <div class="cardTwo cards">
+                        <img src="./assets/sample-flower-image.png" alt="">
+                        <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
+                        <button class="btn">ADD TO CART</button>
+                    </div>
+                    <div class="cardThree cards">
+                        <img src="./assets/sample-flower-image.png" alt="">
+                        <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
+                        <button class="btn">ADD TO CART</button>
+                    </div>
+                    <div class="cardFour cards">
+                        <img src="./assets/sample-flower-image.png" alt="">
+                        <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
+                        <button class="btn">ADD TO CART</button>
+                    </div>
+                    <div class="cardFive cards">
+                        <img src="./assets/sample-flower-image.png" alt="">
+                        <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
+                        <button class="btn">ADD TO CART</button>
+                    </div>
+                    <div class="cardSix cards">
+                        <img src="./assets/sample-flower-image.png" alt="">
+                        <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
+                        <button class="btn">ADD TO CART</button>
+                    </div>
+                    <div class="cardSeven cards">
+                        <img src="./assets/sample-flower-image.png" alt="">
+                        <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
+                        <button class="btn">ADD TO CART</button>
+                    </div>
+                    <div class="cardEight cards">
+                        <img src="./assets/sample-flower-image.png" alt="">
+                        <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
+                        <button class="btn">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
     <!--END-->
+
+
+
+
+
+
 
 
 
