Flower Shop Section Created

--- a/structure.html
+++ b/structure.html
@@ -135,6 +135,57 @@
 
 
 
+    <!--Shop Section--> 
+ 
+
+
+    <section class="flowerShopContainer">
+        <div class="shopSection">
+            <div class="imgBoxShop">
+                <img src="./assets/trusted-badge.png" class=" trustBadge w-[300px]" alt="">
+                 <img src="./assets/flower-store.png" alt="">
+            </div>
+
+            <div class="textBoxShop">
+                <h1 class="text-6xl font-bold">Flower & Plants<br class="hideOnMobile">Lover</h1>
+                <ul class="list-disc">
+                    <li><p>Nature Connection: They find peace and joy in being close to nature, appreciating the beauty, colors, and fragrance of flowers and the calming presence of greenery.</p></li>
+
+
+                     <li><p>Care & Patience: Taking care of plants requires regular attention, patience, and love—qualities that reflect a nurturing personality.</p></li>
+
+                      <li><p>Creative & Aesthetic Sense: They often enjoy decorating spaces with flowers and plants, showcasing a creative mind and a love for beautiful, serene environments.</p></li>
+                </ul>
+            </div>
+           
+
+        </div>
+    </section>
+
+
+
+
+
+      <!--END-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
