Deal Section Crated

--- a/structure.html
+++ b/structure.html
@@ -51,7 +51,7 @@
                     </p>
                 </div>
                 <div class="imgSection">
-                    <img src="./assets/hero-flower.png" alt="">
+                    <img class="w-[100%]" src="./assets/hero-flower.png" alt="">
                 </div>
             </div>
         </section>
@@ -162,6 +162,53 @@
         </div>
     </section>
 
+
+
+
+
+      <!--END-->
+
+
+
+
+
+
+
+
+
+
+
+      <!--Latest Deal Section-->
+
+      <section class="dealContainer">
+        <div class="dealSection">
+             <div class="heroHeading">
+                    <h1 class="text-5xl font-bold text-center"><span class="customColor">Latest</span> Deal</h1>
+                    <p class="text-center w-[800px]">Flowers whisper stories of seasons, blooming in quiet grace. Their colors dance in sunlight, offering peace and inspiration. Each petal holds emotion—soft reminders of beauty, growth, and fleeting moments.
+                    </p>
+             </div>
+
+             <div class="deal_boxes">
+                <div class="box_1">
+                    <div class="childBox childOne">
+                        <h2>60% Off | Bloom Plant</h2>
+                        <a href="#">Shop Now</a>
+                    </div>
+                    <div class="childBox childTwo">
+                        <h2>30% Off | Ana Plant</h2>
+                        <a href="#">Shop Now</a>
+                     </div>
+                 </div>
+
+
+            <div class="box_2">
+                <div class="childBox childThree">
+                      <h2>25% Off | Zabo Plant</h2>
+                    <a href="#">Shop Now</a>
+                </div>
+                </div>
+            </div>
+        </section>
 
 
 
