News Letter Section created

--- a/structure.html
+++ b/structure.html
@@ -222,6 +222,30 @@
 
 
 
+      
+      <!--Join The Branch Section-->
+        <section class="joinContainer">
+            <div class="joinSection">
+                <div class="title"><p class="text-5xl font-bold">Join the colorful branch</p></div>
+                <div class="searchBox">
+                    <input type="email" name="" id="" placeholder="Write email">
+                    <input type="submit" name="" id="" value="Subscribe" class="subButton">
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+      
+      <!--END-->
+
+
+
+
+
+
 
 
 
