--- a/structure.html
+++ b/structure.html
@@ -8,8 +8,8 @@
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
      <!--Google FONT'S-->
      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!--Custom CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -223,10 +223,10 @@
 
 
       
-      <!--Join The Branch Section-->
+      <!--News Letter Section-->
         <section class="joinContainer">
             <div class="joinSection">
-                <div class="title"><p class="text-5xl font-bold">Join the colorful branch</p></div>
+                <div class="title"><p class="text-5xl font-bold bg-transparent">Join the colorful branch</p></div>
                 <div class="searchBox">
                     <input type="email" name="" id="" placeholder="Write email">
                     <input type="submit" name="" id="" value="Subscribe" class="subButton">
