Footer Section Added with optional animation and Alert box

--- a/structure.html
+++ b/structure.html
@@ -55,7 +55,6 @@
                 </div>
             </div>
         </section>
-
     <!--END-->
 
 
@@ -80,49 +79,46 @@
                     <div class="cardOne cards">
                         <img src="./assets/sample-flower-image.png" alt="">
                         <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
-                        <button class="btn">ADD TO CART</button>
+                        <button class="btn" onclick="alert('Flower Added to Cart');">ADD TO CART</button>
                     </div>
                     <div class="cardTwo cards">
                         <img src="./assets/sample-flower-image.png" alt="">
                         <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
-                        <button class="btn">ADD TO CART</button>
+                        <button class="btn" onclick="alert('Flower Added to Cart');">ADD TO CART</button>
                     </div>
                     <div class="cardThree cards">
                         <img src="./assets/sample-flower-image.png" alt="">
                         <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
-                        <button class="btn">ADD TO CART</button>
+                        <button class="btn" onclick="alert('Flower Added to Cart');">ADD TO CART</button>
                     </div>
                     <div class="cardFour cards">
                         <img src="./assets/sample-flower-image.png" alt="">
                         <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
-                        <button class="btn">ADD TO CART</button>
+                        <button class="btn" onclick="alert('Flower Added to Cart');">ADD TO CART</button>
                     </div>
                     <div class="cardFive cards">
                         <img src="./assets/sample-flower-image.png" alt="">
                         <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
-                        <button class="btn">ADD TO CART</button>
+                        <button class="btn" onclick="alert('Flower Added to Cart');">ADD TO CART</button>
                     </div>
                     <div class="cardSix cards">
                         <img src="./assets/sample-flower-image.png" alt="">
                         <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
-                        <button class="btn">ADD TO CART</button>
+                        <button class="btn" onclick="alert('Flower Added to Cart');">ADD TO CART</button>
                     </div>
                     <div class="cardSeven cards">
                         <img src="./assets/sample-flower-image.png" alt="">
                         <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
-                        <button class="btn">ADD TO CART</button>
+                        <button class="btn" onclick="alert('Flower Added to Cart');">ADD TO CART</button>
                     </div>
                     <div class="cardEight cards">
                         <img src="./assets/sample-flower-image.png" alt="">
                         <h2 class="text-center">Lilly Blossom <br> <b>20$</b></h2>
-                        <button class="btn">ADD TO CART</button>
+                        <button class="btn" onclick="alert('Flower Added to Cart');">ADD TO CART</button>
                     </div>
                 </div>
             </div>
         </section>
-
-
-
     <!--END-->
 
 
@@ -136,9 +132,6 @@
 
 
     <!--Shop Section--> 
- 
-
-
     <section class="flowerShopContainer">
         <div class="shopSection">
             <div class="imgBoxShop">
@@ -161,11 +154,6 @@
 
         </div>
     </section>
-
-
-
-
-
       <!--END-->
 
 
@@ -179,7 +167,6 @@
 
 
       <!--Latest Deal Section-->
-
       <section class="dealContainer">
         <div class="dealSection">
              <div class="heroHeading">
@@ -209,10 +196,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
       <!--END-->
 
 
@@ -233,12 +216,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
-
-      
       <!--END-->
 
 
@@ -250,7 +227,48 @@
 
 
 
+      <!--Footer Section-->
 
+      <div class="footerContainer">
+        <div class="footerSection">
+            <div class="part_1">
+                <img src="./assets/logo.png" alt="" class="fLogo">
+                <p class="fText">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                </p>
+            </div>
+            <div class="part_2">
+                <ul class="quickLinks">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Blogs</li>
+                    <li>FAQs</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="part_3">
+                 <ul class="featurekLinks">
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Privacy Policy</li>
+                    <li>Terms of Service</li>
+                    <li>Help-Center</li>
+                </ul>
+            </div>
+            <div class="part_4">
+                <div class="socialIcons">
+                    <img src="./assets/icon-facebook.png" alt="">
+                    <img src="./assets/icon-linkedin.png" alt="">
+                    <img src="./assets/icon-twitter.png" alt="">
+                    <img src="./assets/icon-youtube.png" alt="">
+                </div>
+            </div>
+        </div>
+      </div>
+
+
+
+      <!--END-->
 
 
 
